--- a/assignment-5/a5-home.html
+++ b/assignment-5/a5-home.html
@@ -14,6 +14,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500;1,700&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="styles/a5-global.css">
     <link rel="stylesheet" href="styles/a5-navbar.css">
     <link rel="stylesheet" href="styles/a5-home.css">
 </head>
