--- a/assignment-5/a5-browse.html
+++ b/assignment-5/a5-browse.html
@@ -35,6 +35,12 @@
             </ul>
         </div>
     </nav>
+    <main class="a5-browse-main">
+        <h1 class="a5-browse-menu-title">Menu</h1>
+        <p class="a5-browse-menu-oneliner">Choose from a variety of lip-smacking cinnamon rolls that cater to every need
+            and sugar craving. We promise
+            that we’ve got something on the menu for everyone!</p>
+    </main>
 </body>
 
 </html>
