Create option cards in browse page

--- a/assignment-5/a5-browse.html
+++ b/assignment-5/a5-browse.html
@@ -40,6 +40,47 @@
         <p class="a5-browse-menu-oneliner">Choose from a variety of lip-smacking cinnamon rolls that cater to every need
             and sugar craving. We promise
             that we’ve got something on the menu for everyone!</p>
+        <div class="a5-bun-option-list">
+            <div class="a5-bun-option-row">
+                <div class="a5-bun-option">
+                    <div class="a5-bun-option-card">
+                        <p>Some text</p>
+                    </div>
+                </div>
+
+                <div class="a5-bun-option">
+                    <div class="a5-bun-option-cardard">
+                        <p>Some text</p>
+                    </div>
+                </div>
+            </div>
+            <div class="a5-bun-option-row">
+                <div class="a5-bun-option">
+                    <div class="a5-bun-option-card">
+                        <p>Some text</p>
+                    </div>
+                </div>
+
+                <div class="a5-bun-option">
+                    <div class="a5-bun-option-card">
+                        <p>Some text</p>
+                    </div>
+                </div>
+            </div>
+            <div class="a5-bun-option-row">
+                <div class="a5-bun-option">
+                    <div class="a5-bun-option-card">
+                        <p>Some text</p>
+                    </div>
+                </div>
+
+                <div class="a5-bun-option">
+                    <div class="a5-bun-option-card">
+                        <p>Some text</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 
