--- a/assignment-5/a5-browse.html
+++ b/assignment-5/a5-browse.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles/a5-global.css">
     <link rel="stylesheet" href="styles/a5-navbar.css">
     <link rel="stylesheet" href="styles/a5-browse.css">
+    <link rel="stylesheet" href="styles/a5-footer.css">
 </head>
 
 <body>
@@ -114,6 +115,19 @@
             </div>
         </div>
     </main>
+    <footer class="a5-footer">
+        <div class="a5-socials">
+            <ul class="a5-footer-links">
+                <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#">Insta</a></li>
+                <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#">FB</a></li>
+                <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#">Pinterest</a></li>
+            </ul>
+        </div>
+        <div class="a5-footer-misc-links">
+            <li class="footer-item"><a class="a5-footer-link a5-footer-misc-link" href="">Contact Us</a></li>
+            <li class="footer-item"><a class="a5-footer-link a5-footer-misc-link" href="#">FAQs</a></li>
+        </div>
+    </footer>
 </body>
 
 </html>
