Add actual logos in navbar & footer

--- a/assignment-5/a5-browse.html
+++ b/assignment-5/a5-browse.html
@@ -32,7 +32,8 @@
                 <li class="nav-item"><a class="a5-nav-link" href="./a5-browse.html">Menu</a></li>
                 <li class="nav-item"><a class="a5-nav-link" href="#">About</a></li>
                 <li class="nav-item"><a class="a5-nav-link" href="#">Gallery</a></li>
-                <li class="nav-item"><a class="a5-nav-link" href="#">Cart</a></li>
+                <li class="nav-item"><a class="a5-nav-link" href="#"><img src="../assets/cart_icon.png"
+                            alt="BunBun Logo" width="24" class="nav-logo-img" /></a></li>
             </ul>
         </div>
     </nav>
@@ -118,9 +119,15 @@
     <footer class="a5-footer">
         <div class="a5-socials">
             <ul class="a5-footer-links">
-                <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#">Insta</a></li>
-                <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#">FB</a></li>
-                <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#">Pinterest</a></li>
+                <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
+                            src="../assets/instagram_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                </li>
+                <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
+                            src="../assets/facebook_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                </li>
+                <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
+                            src="../assets/pinterest_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                </li>
             </ul>
         </div>
         <div class="a5-footer-misc-links">
