--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>PUI</title>
+    <title>PUI Home 🏡</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,500&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500;1,700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div>
-        <p>Hi, I'm Anushree Abhyankar (asabhyan). Welcome to my PUI repo!</p>
-        <p>Please click on the following links to access each individual project</p>
-        <ul>
+    <main class="pui-home-main">
+        <h1>👩🏻‍💻</h1>
+        <h1>Hi, I'm Anushree Abhyankar (asabhyan). Welcome to my PUI repo!</h1>
+        <p>Please click on the following links to access each individual project:</p>
+        <ul class="pui-assignment-list">
             <li>
                 <a href="./assignment-5/a5-home.html" target="_blank">Assignment 5 – Web HTML and CSS Prototypes</a>
             </li>
         </ul>
-    </div>
+    </main>
 </body>
 
 </html>
