--- a/assignment-5/a5-home.html
+++ b/assignment-5/a5-home.html
@@ -35,6 +35,11 @@
             </ul>
         </div>
     </nav>
+    <main>
+        <div class="a5-landing-cover">
+
+        </div>
+    </main>
 </body>
 
 </html>
