Add customer reviews

--- a/assignment-5/a5-home.html
+++ b/assignment-5/a5-home.html
@@ -39,6 +39,31 @@
         <div class="a5-landing-cover">
 
         </div>
+        <div class="a5-customer-reviews">
+            <div class="a5-review-row">
+                <div class="a5-review">
+                    <p>“I always come here whenever I’m in town! Literally the best cinnamon buns in the US! LOVE” -
+                        Jimmy, San Jose</p>
+                </div>
+
+                <div class="a5-review">
+                    <p>“The Pumpkin Spice buns @ Bun Bun are so delicious! I love coming here with my
+                        kids every weekend!” - Laila, Pittsburgh</p>
+
+                </div>
+            </div>
+            <div class="a5-review-row">
+                <div class="a5-review">
+                    <p>“I’ve been coming here since I was 5. It just keeps getting better! The original cinnamon bun
+                        will NEVER get old!” - Shankar, India</p>
+                </div>
+
+                <div class="a5-review">
+                    <p>“Rita and Sujay are lovely hosts. 10/10 would come again. This place is magic!” - Lisa, Denver
+                    </p>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 
