--- a/assignment-5/a5-home.html
+++ b/assignment-5/a5-home.html
@@ -31,7 +31,8 @@
                 <li class="nav-item"><a class="a5-nav-link" href="./a5-browse.html">Menu</a></li>
                 <li class="nav-item"><a class="a5-nav-link" href="#">About</a></li>
                 <li class="nav-item"><a class="a5-nav-link" href="#">Gallery</a></li>
-                <li class="nav-item"><a class="a5-nav-link" href="#">Cart</a></li>
+                <li class="nav-item"><a class="a5-nav-link" href="#"><img src="../assets/cart_icon.png" alt="Cart Logo"
+                            width="24" class="nav-logo-img" /></a></li>
             </ul>
         </div>
     </nav>
