--- a/assignment-5/a5-home.html
+++ b/assignment-5/a5-home.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles/a5-global.css">
     <link rel="stylesheet" href="styles/a5-navbar.css">
     <link rel="stylesheet" href="styles/a5-home.css">
+    <link rel="stylesheet" href="styles/a5-footer.css">
 </head>
 
 <body>
@@ -66,6 +67,25 @@
             </div>
         </div>
     </main>
+    <footer class="a5-footer">
+        <div class="a5-socials">
+            <ul class="a5-footer-links">
+                <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
+                            src="../assets/instagram_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                </li>
+                <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
+                            src="../assets/facebook_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                </li>
+                <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
+                            src="../assets/pinterest_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                </li>
+            </ul>
+        </div>
+        <div class="a5-footer-misc-links">
+            <li class="footer-item"><a class="a5-footer-link a5-footer-misc-link" href="">Contact Us</a></li>
+            <li class="footer-item"><a class="a5-footer-link a5-footer-misc-link" href="#">FAQs</a></li>
+        </div>
+    </footer>
 </body>
 
 </html>
