Add accolades on homepage

--- a/assignment-5/a5-home.html
+++ b/assignment-5/a5-home.html
@@ -41,6 +41,28 @@
         <div class="a5-landing-cover">
 
         </div>
+        <div class="a5-awards">
+            <div class="a5-award-row">
+                <div class="a5-award">
+                    <img class="a5-award_logo" src="../assets/award_logo.png">
+                    <p>Voted #1 in the #pghBunFuns Competition</p>
+                </div>
+                <div class="a5-award">
+                    <img class="a5-award_logo" src="../assets/hearts.png">
+                    <p>4/5 tourists visited BunBun when they were in PGH</p>
+                </div>
+            </div>
+            <div class="a5-award-row">
+                <div class="a5-award">
+                    <img class="a5-award_logo" src="../assets/approval.png">
+                    <p>A trusted brand in PGH, trusted by locals since '94</p>
+                </div>
+                <div class="a5-award">
+                    <img class="a5-award_logo" src="../assets/badge.png">
+                    <p>Winner of the USA Confectionary Awards '17</p>
+                </div>
+            </div>
+        </div>
         <div class="a5-customer-reviews">
             <div class="a5-review-row">
                 <div class="a5-review">
@@ -61,7 +83,8 @@
                 </div>
 
                 <div class="a5-review">
-                    <p>“Rita and Sujay are lovely hosts. 10/10 would come again. This place is magic!” - Lisa, Denver
+                    <p>“Rita and Sujay are lovely hosts. 10/10 would come again. This place is magic!” - Lisa,
+                        Denver
                     </p>
                 </div>
             </div>
