Add title and oneliner on details page

--- a/assignment-5/a5-details.html
+++ b/assignment-5/a5-details.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/a5-global.css">
     <link rel="stylesheet" href="styles/a5-navbar.css">
     <link rel="stylesheet" href="styles/a5-footer.css">
+    <link rel="stylesheet" href="styles/a5-details.css">
 </head>
 
 <body>
@@ -34,6 +35,11 @@
             </ul>
         </div>
     </nav>
+    <main class="a5-details-main">
+        <h1 class="a5-details-title">Pumpkin Spice</h1>
+        <p class="a5-details-oneliner">A fall favorite and something that’s always selling out, this cinnamon roll is
+            now available all year round on popular demand! Best enjoyed warm with a hot cup of tea.</p>
+    </main>
     <footer class="a5-footer">
         <div class="a5-socials">
             <ul class="a5-footer-links">
