--- a/assignment-5/a5-details.html
+++ b/assignment-5/a5-details.html
@@ -39,6 +39,34 @@
         <h1 class="a5-details-title">Pumpkin Spice</h1>
         <p class="a5-details-oneliner">A fall favorite and something that’s always selling out, this cinnamon roll is
             now available all year round on popular demand! Best enjoyed warm with a hot cup of tea.</p>
+        <div class="a5-details-bun-description">
+            <img class="a5-details-bun-image" src="../assets/bun5.jpeg">
+            <div class="a5-details-bun-info">
+                <p class="a5-details-bun-out-of-stock">Out of stock!</p>
+                <div class="a5-details-bun-detail">
+                    <p>Price</p>
+                    <p>12 $</p>
+                </div>
+                <div class="a5-details-bun-detail">
+                    <p>Quantity</p>
+                    <select name="a5-bun-quantity" id="a5-bun-quantity">
+                        <option value="a5-bun-qty1">1 piece</option>
+                        <option value="a5-bun-qty3">3 pieces</option>
+                        <option value="a5-bun-qty6">6 pieces</option>
+                        <option value="a5-bun-qty12">12 pieces</option>
+                    </select>
+                </div>
+                <div class="a5-details-bun-detail">
+                    <p>Glaze</p>
+                    <select name="a5-bun-quantity" id="a5-bun-quantity">
+                        <option value="a5-bun-qty1">None</option>
+                        <option value="a5-bun-qty3">Sugar-milk</option>
+                        <option value="a5-bun-qty6">Vanilla-milk</option>
+                        <option value="a5-bun-qty12">Double-chocolate</option>
+                    </select>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="a5-footer">
         <div class="a5-socials">
