Add static additional info rows to details pg

--- a/assignment-5/a5-details.html
+++ b/assignment-5/a5-details.html
@@ -42,7 +42,7 @@
         <div class="a5-details-bun-description">
             <img class="a5-details-bun-image" src="../assets/bun5.jpeg">
             <div class="a5-details-bun-info">
-                <p class="a5-details-bun-out-of-stock">Out of stock!</p>
+                <p class="a5-details-bun-out-of-stock">8 buns left!</p>
                 <div class="a5-details-bun-detail">
                     <p>Price</p>
                     <p>12 $</p>
@@ -65,6 +65,16 @@
                         <option value="a5-bun-qty12">Double-chocolate</option>
                     </select>
                 </div>
+            </div>
+        </div>
+        <div class=class="a5-details-bun-extra-info">
+            <div class="a5-details-bun-extra-info-row">
+                <h2 class="a5-details-bun-extra-info-title">Ingredients</h2>
+                <img class="a5-details-down-arrow" src="../assets/down-arrow.png">
+            </div>
+            <div class="a5-details-bun-extra-info-row">
+                <h2 class="a5-details-bun-extra-info-title">Storage Info</h2>
+                <img class="a5-details-down-arrow" src="../assets/down-arrow.png">
             </div>
         </div>
     </main>
