Add bestsellers section in details pg

--- a/assignment-5/a5-details.html
+++ b/assignment-5/a5-details.html
@@ -76,6 +76,38 @@
                 <h2 class="a5-details-bun-extra-info-title">Storage Info</h2>
                 <img class="a5-details-down-arrow" src="../assets/down-arrow.png">
             </div>
+            <div class="a5-details-bun-bestsellers">
+                <h2 class="a5-details-bun-extra-info-title">Our Bestsellers</h2>
+                <p>Because why stop at only one variety? Here are some of our most popular varieties that you must try!
+                    We promise you won’t regret it.</p>
+                <div class="a5-bun-option-list">
+                    <div class="a5-bun-option-row">
+                        <div class="a5-bun-option">
+                            <div class="a5-bun-option-card">
+                                <img class="a5-bun-image" src="../assets/bun8.jpeg">
+                            </div>
+                            <div class="a5-bun-info">
+                                <span class="a5-bun-availability">5 buns left!</span>
+                                <span class="a5-bun-price">$2</span>
+                            </div>
+                            <h3 class="a5-bun-name">Original</h3>
+                        </div>
+                    </div>
+                    <div class="a5-bun-option-row">
+                        <div class="a5-bun-option">
+                            <div class="a5-bun-option-card">
+                                <img class="a5-bun-image" src="../assets/bun6.jpeg">
+                            </div>
+                            <div class="a5-bun-info">
+                                <span class="a5-bun-out-of-stock">Out of stock!</span>
+                                <span class="a5-bun-price">$5.50</span>
+                            </div>
+                            <h3 class="a5-bun-name">Walnut</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </main>
     <footer class="a5-footer">
