--- a/assignment-5/a5-browse.html
+++ b/assignment-5/a5-browse.html
@@ -45,73 +45,85 @@
         <div class="a5-bun-option-list">
             <div class="a5-bun-option-row">
                 <div class="a5-bun-option">
-                    <div class="a5-bun-option-card">
-                        <img class="a5-bun-image" src="../assets/bun8.jpeg">
-                    </div>
-                    <div class="a5-bun-info">
-                        <span class="a5-bun-availability">5 buns left!</span>
-                        <span class="a5-bun-price">$2</span>
-                    </div>
-                    <h3 class="a5-bun-name">Original</h3>
-                </div>
-
-                <div class="a5-bun-option">
-                    <div class="a5-bun-option-card">
+                    <a href="a5-details.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
-                            <img class="a5-bun-image" src="../assets/bun5.jpeg">
+                            <img class="a5-bun-image" src="../assets/bun8.jpeg">
                         </div>
                         <div class="a5-bun-info">
-                            <span class="a5-bun-availability">8 buns left!</span>
-                            <span class="a5-bun-price">$4</span>
+                            <span class="a5-bun-availability">5 buns left!</span>
+                            <span class="a5-bun-price">$2</span>
                         </div>
-                        <h3 class="a5-bun-name">Pumpkin Spice</h3>
-                    </div>
+                        <h3 class="a5-bun-name">Original</h3>
+                    </a>
+                </div>
+
+                <div class="a5-bun-option">
+                    <a href="a5-details.html" class="a5-bun-option-card-link">
+                        <div class="a5-bun-option-card">
+                            <div class="a5-bun-option-card">
+                                <img class="a5-bun-image" src="../assets/bun5.jpeg">
+                            </div>
+                            <div class="a5-bun-info">
+                                <span class="a5-bun-availability">8 buns left!</span>
+                                <span class="a5-bun-price">$4</span>
+                            </div>
+                            <h3 class="a5-bun-name">Pumpkin Spice</h3>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="a5-bun-option-row">
                 <div class="a5-bun-option">
-                    <div class="a5-bun-option-card">
-                        <img class="a5-bun-image" src="../assets/bun6.jpeg">
-                    </div>
-                    <div class="a5-bun-info">
-                        <span class="a5-bun-out-of-stock">Out of stock!</span>
-                        <span class="a5-bun-price">$5.50</span>
-                    </div>
-                    <h3 class="a5-bun-name">Walnut</h3>
+                    <a href="a5-details.html" class="a5-bun-option-card-link">
+                        <div class="a5-bun-option-card">
+                            <img class="a5-bun-image" src="../assets/bun6.jpeg">
+                        </div>
+                        <div class="a5-bun-info">
+                            <span class="a5-bun-out-of-stock">Out of stock!</span>
+                            <span class="a5-bun-price">$5.50</span>
+                        </div>
+                        <h3 class="a5-bun-name">Walnut</h3>
+                    </a>
                 </div>
 
                 <div class="a5-bun-option">
-                    <div class="a5-bun-option-card">
-                        <img class="a5-bun-image" src="../assets/bun1.jpeg">
-                    </div>
-                    <div class="a5-bun-info">
-                        <span class="a5-bun-availability">4 buns left!</span>
-                        <span class="a5-bun-price">$6</span>
-                    </div>
-                    <h3 class="a5-bun-name">Original (gluten free)</h3>
+                    <a href="a5-details.html" class="a5-bun-option-card-link">
+                        <div class="a5-bun-option-card">
+                            <img class="a5-bun-image" src="../assets/bun1.jpeg">
+                        </div>
+                        <div class="a5-bun-info">
+                            <span class="a5-bun-availability">4 buns left!</span>
+                            <span class="a5-bun-price">$6</span>
+                        </div>
+                        <h3 class="a5-bun-name">Original (gluten free)</h3>
+                    </a>
                 </div>
             </div>
             <div class="a5-bun-option-row">
                 <div class="a5-bun-option">
-                    <div class="a5-bun-option-card">
-                        <img class="a5-bun-image" src="../assets/bun9.jpeg">
-                    </div>
-                    <div class="a5-bun-info">
-                        <span class="a5-bun-availability">12 buns left!</span>
-                        <span class="a5-bun-price">$8</span>
-                    </div>
-                    <h3 class="a5-bun-name">Blackberry</h3>
+                    <a href="a5-details.html" class="a5-bun-option-card-link">
+                        <div class="a5-bun-option-card">
+                            <img class="a5-bun-image" src="../assets/bun9.jpeg">
+                        </div>
+                        <div class="a5-bun-info">
+                            <span class="a5-bun-availability">12 buns left!</span>
+                            <span class="a5-bun-price">$8</span>
+                        </div>
+                        <h3 class="a5-bun-name">Blackberry</h3>
+                    </a>
                 </div>
 
                 <div class="a5-bun-option">
-                    <div class="a5-bun-option-card">
-                        <img class="a5-bun-image" src="../assets/bun4.jpeg">
-                    </div>
-                    <div class="a5-bun-info">
-                        <span class="a5-bun-out-of-stock">Out of stock!</span>
-                        <span class="a5-bun-price">$12</span>
-                    </div>
-                    <h3 class="a5-bun-name">Caramel Pecan</h3>
+                    <a href="a5-details.html" class="a5-bun-option-card-link">
+                        <div class="a5-bun-option-card">
+                            <img class="a5-bun-image" src="../assets/bun4.jpeg">
+                        </div>
+                        <div class="a5-bun-info">
+                            <span class="a5-bun-out-of-stock">Out of stock!</span>
+                            <span class="a5-bun-price">$12</span>
+                        </div>
+                        <h3 class="a5-bun-name">Caramel Pecan</h3>
+                    </a>
                 </div>
             </div>
         </div>
