Fix path location string to assets folder

--- a/assignment-5/a5-home.html
+++ b/assignment-5/a5-home.html
@@ -24,7 +24,7 @@
     <nav class="a5-navbar">
         <div class="a5-logo">
             <a href="a5-home.html" class="a5-logo">
-                <img src="../assets/LOGO.png" alt="BunBun Logo" width="90" class="nav-logo-img" />
+                <img src="./assets/LOGO.png" alt="BunBun Logo" width="90" class="nav-logo-img" />
             </a>
         </div>
         <div>
@@ -32,7 +32,7 @@
                 <li class="nav-item"><a class="a5-nav-link" href="./a5-browse.html">Menu</a></li>
                 <li class="nav-item"><a class="a5-nav-link" href="#">About</a></li>
                 <li class="nav-item"><a class="a5-nav-link" href="#">Gallery</a></li>
-                <li class="nav-item"><a class="a5-nav-link" href="#"><img src="../assets/cart_icon.png" alt="Cart Logo"
+                <li class="nav-item"><a class="a5-nav-link" href="#"><img src="./assets/cart_icon.png" alt="Cart Logo"
                             width="24" class="nav-logo-img" /></a></li>
             </ul>
         </div>
@@ -44,21 +44,21 @@
         <div class="a5-awards">
             <div class="a5-award-row">
                 <div class="a5-award">
-                    <img class="a5-award_logo" src="../assets/award_logo.png">
+                    <img class="a5-award_logo" src="./assets/award_logo.png">
                     <p>Voted #1 in the #pghBunFuns Competition</p>
                 </div>
                 <div class="a5-award">
-                    <img class="a5-award_logo" src="../assets/hearts.png">
+                    <img class="a5-award_logo" src="./assets/hearts.png">
                     <p>4/5 tourists visited BunBun when they were in PGH</p>
                 </div>
             </div>
             <div class="a5-award-row">
                 <div class="a5-award">
-                    <img class="a5-award_logo" src="../assets/approval.png">
+                    <img class="a5-award_logo" src="./assets/approval.png">
                     <p>A trusted brand in PGH, trusted by locals since '94</p>
                 </div>
                 <div class="a5-award">
-                    <img class="a5-award_logo" src="../assets/badge.png">
+                    <img class="a5-award_logo" src="./assets/badge.png">
                     <p>Winner of the USA Confectionary Awards '17</p>
                 </div>
             </div>
@@ -79,13 +79,13 @@
         <div class="a5-socials">
             <ul class="a5-footer-links">
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="../assets/instagram_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/instagram_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
                 </li>
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="../assets/facebook_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/facebook_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
                 </li>
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="../assets/pinterest_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/pinterest_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
                 </li>
             </ul>
         </div>
