--- a/assignment-5/a5-browse.html
+++ b/assignment-5/a5-browse.html
@@ -24,7 +24,7 @@
     <nav class="a5-navbar">
         <div class="a5-logo">
             <a href="a5-home.html" class="a5-logo">
-                <img src="../assets/LOGO.png" alt="BunBun Logo" width="90" class="nav-logo-img" />
+                <img src="./assets/LOGO.png" alt="BunBun Logo" width="90" class="nav-logo-img" />
             </a>
         </div>
         <div>
@@ -32,7 +32,7 @@
                 <li class="nav-item"><a class="a5-nav-link" href="./a5-browse.html">Menu</a></li>
                 <li class="nav-item"><a class="a5-nav-link" href="#">About</a></li>
                 <li class="nav-item"><a class="a5-nav-link" href="#">Gallery</a></li>
-                <li class="nav-item"><a class="a5-nav-link" href="#"><img src="../assets/cart_icon.png" alt="Cart Logo"
+                <li class="nav-item"><a class="a5-nav-link" href="#"><img src="./assets/cart_icon.png" alt="Cart Logo"
                             width="24" class="nav-logo-img" /></a></li>
             </ul>
         </div>
@@ -47,7 +47,7 @@
                 <div class="a5-bun-option">
                     <a href="a5-details.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
-                            <img class="a5-bun-image" src="../assets/bun8.jpeg">
+                            <img class="a5-bun-image" src="./assets/bun8.jpeg">
                         </div>
                         <div class="a5-bun-info">
                             <span class="a5-bun-availability">5 buns left!</span>
@@ -61,7 +61,7 @@
                     <a href="a5-details.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
                             <div class="a5-bun-option-card">
-                                <img class="a5-bun-image" src="../assets/bun5.jpeg">
+                                <img class="a5-bun-image" src="./assets/bun5.jpeg">
                             </div>
                             <div class="a5-bun-info">
                                 <span class="a5-bun-availability">8 buns left!</span>
@@ -76,7 +76,7 @@
                 <div class="a5-bun-option">
                     <a href="a5-details.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
-                            <img class="a5-bun-image" src="../assets/bun6.jpeg">
+                            <img class="a5-bun-image" src="./assets/bun6.jpeg">
                         </div>
                         <div class="a5-bun-info">
                             <span class="a5-bun-out-of-stock">Out of stock!</span>
@@ -89,7 +89,7 @@
                 <div class="a5-bun-option">
                     <a href="a5-details.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
-                            <img class="a5-bun-image" src="../assets/bun1.jpeg">
+                            <img class="a5-bun-image" src="./assets/bun1.jpeg">
                         </div>
                         <div class="a5-bun-info">
                             <span class="a5-bun-availability">4 buns left!</span>
@@ -103,7 +103,7 @@
                 <div class="a5-bun-option">
                     <a href="a5-details.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
-                            <img class="a5-bun-image" src="../assets/bun9.jpeg">
+                            <img class="a5-bun-image" src="./assets/bun9.jpeg">
                         </div>
                         <div class="a5-bun-info">
                             <span class="a5-bun-availability">12 buns left!</span>
@@ -116,7 +116,7 @@
                 <div class="a5-bun-option">
                     <a href="a5-details.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
-                            <img class="a5-bun-image" src="../assets/bun4.jpeg">
+                            <img class="a5-bun-image" src="./assets/bun4.jpeg">
                         </div>
                         <div class="a5-bun-info">
                             <span class="a5-bun-out-of-stock">Out of stock!</span>
@@ -132,13 +132,13 @@
         <div class="a5-socials">
             <ul class="a5-footer-links">
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="../assets/instagram_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/instagram_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
                 </li>
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="../assets/facebook_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/facebook_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
                 </li>
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="../assets/pinterest_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/pinterest_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
                 </li>
             </ul>
         </div>
