--- a/assignment-5/a5-contact.html
+++ b/assignment-5/a5-contact.html
@@ -24,7 +24,7 @@
     <nav class="a5-navbar">
         <div class="a5-logo">
             <a href="a5-home.html" class="a5-logo">
-                <img src="../assets/LOGO.png" alt="BunBun Logo" width="90" class="nav-logo-img" />
+                <img src="./assets/LOGO.png" alt="BunBun Logo" width="90" class="nav-logo-img" />
             </a>
         </div>
         <div>
@@ -32,7 +32,7 @@
                 <li class="nav-item"><a class="a5-nav-link" href="./a5-browse.html">Menu</a></li>
                 <li class="nav-item"><a class="a5-nav-link" href="#">About</a></li>
                 <li class="nav-item"><a class="a5-nav-link" href="#">Gallery</a></li>
-                <li class="nav-item"><a class="a5-nav-link" href="#"><img src="../assets/cart_icon.png" alt="Cart Logo"
+                <li class="nav-item"><a class="a5-nav-link" href="#"><img src="./assets/cart_icon.png" alt="Cart Logo"
                             width="24" class="nav-logo-img" /></a></li>
             </ul>
         </div>
@@ -41,13 +41,13 @@
         <div class="a5-socials">
             <ul class="a5-footer-links">
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="../assets/instagram_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/instagram_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
                 </li>
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="../assets/facebook_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/facebook_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
                 </li>
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="../assets/pinterest_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/pinterest_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
                 </li>
             </ul>
         </div>
