--- a/assignment-5/a5-details.html
+++ b/assignment-5/a5-details.html
@@ -22,7 +22,7 @@
     <nav class="a5-navbar">
         <div class="a5-logo">
             <a href="a5-home.html" class="a5-logo">
-                <img src="../assets/LOGO.png" alt="BunBun Logo" width="90" class="nav-logo-img" />
+                <img src="./assets/LOGO.png" alt="BunBun Logo" width="90" class="nav-logo-img" />
             </a>
         </div>
         <div>
@@ -30,7 +30,7 @@
                 <li class="nav-item"><a class="a5-nav-link" href="./a5-browse.html">Menu</a></li>
                 <li class="nav-item"><a class="a5-nav-link" href="#">About</a></li>
                 <li class="nav-item"><a class="a5-nav-link" href="#">Gallery</a></li>
-                <li class="nav-item"><a class="a5-nav-link" href="#"><img src="../assets/cart_icon.png" alt="Cart Logo"
+                <li class="nav-item"><a class="a5-nav-link" href="#"><img src="./assets/cart_icon.png" alt="Cart Logo"
                             width="24" class="nav-logo-img" /></a></li>
             </ul>
         </div>
@@ -40,7 +40,7 @@
         <p class="a5-details-oneliner">A fall favorite and something that’s always selling out, this cinnamon roll is
             now available all year round on popular demand! Best enjoyed warm with a hot cup of tea.</p>
         <div class="a5-details-bun-description">
-            <img class="a5-details-bun-image" src="../assets/bun5.jpeg">
+            <img class="a5-details-bun-image" src="./assets/bun5.jpeg">
             <div class="a5-details-bun-info">
                 <p class="a5-details-bun-out-of-stock">8 buns left!</p>
                 <div class="a5-details-bun-detail">
@@ -70,11 +70,11 @@
         <div class=class="a5-details-bun-extra-info">
             <div class="a5-details-bun-extra-info-row">
                 <h2 class="a5-details-bun-extra-info-title">Ingredients</h2>
-                <img class="a5-details-down-arrow" src="../assets/down-arrow.png">
+                <img class="a5-details-down-arrow" src="./assets/down-arrow.png">
             </div>
             <div class="a5-details-bun-extra-info-row">
                 <h2 class="a5-details-bun-extra-info-title">Storage Info</h2>
-                <img class="a5-details-down-arrow" src="../assets/down-arrow.png">
+                <img class="a5-details-down-arrow" src="./assets/down-arrow.png">
             </div>
             <div class="a5-details-bun-bestsellers">
                 <h2 class="a5-details-bun-extra-info-title">Our Bestsellers</h2>
@@ -84,7 +84,7 @@
                     <div class="a5-bun-option-row">
                         <div class="a5-bun-option">
                             <div class="a5-bun-option-card">
-                                <img class="a5-bun-image" src="../assets/bun8.jpeg">
+                                <img class="a5-bun-image" src="./assets/bun8.jpeg">
                             </div>
                             <div class="a5-bun-info">
                                 <span class="a5-bun-availability">5 buns left!</span>
@@ -96,7 +96,7 @@
                     <div class="a5-bun-option-row">
                         <div class="a5-bun-option">
                             <div class="a5-bun-option-card">
-                                <img class="a5-bun-image" src="../assets/bun6.jpeg">
+                                <img class="a5-bun-image" src="./assets/bun6.jpeg">
                             </div>
                             <div class="a5-bun-info">
                                 <span class="a5-bun-out-of-stock">Out of stock!</span>
@@ -114,13 +114,13 @@
         <div class="a5-socials">
             <ul class="a5-footer-links">
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="../assets/instagram_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/instagram_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
                 </li>
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="../assets/facebook_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/facebook_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
                 </li>
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="../assets/pinterest_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/pinterest_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
                 </li>
             </ul>
         </div>
