Add oneliner text on contact us page

--- a/assignment-5/a5-contact.html
+++ b/assignment-5/a5-contact.html
@@ -37,6 +37,14 @@
             </ul>
         </div>
     </nav>
+    <main class="a5-contact-main">
+        <h1 class="a5-contact-title">Contact Us</h1>
+        <p class="a5-contact-oneliner">You can call us on <em>(412) 268-2000</em>. Our working hours are 9AM - 8PM from
+            Monday -
+            Saturday. </p>
+        <p class="a5-contact-oneliner">Alternatively, you can also drop us a message using the form below. Expect to see
+            replies in your email inbox during working hours. </p>
+    </main>
     <footer class="a5-footer">
         <div class="a5-socials">
             <ul class="a5-footer-links">
