Add form fields in contact us page

--- a/assignment-5/a5-contact.html
+++ b/assignment-5/a5-contact.html
@@ -44,6 +44,17 @@
             Saturday. </p>
         <p class="a5-contact-oneliner">Alternatively, you can also drop us a message using the form below. Expect to see
             replies in your email inbox during working hours. </p>
+        <form>
+            <label for="name">Name</label>
+            <input type="text" placeholder="Enter your name here" id="name" name="name" required>
+            <label for="email">Email ID</label>
+            <input type="email" placeholder="Enter your email here" id="email" name="email">
+            <label for="title">Message Title</label>
+            <input type="title" placeholder="Enter message title here" id="title" name="title">
+            <label for="message">Message Body</label>
+            <textarea id="message" placeholder="Enter message here" name="message" rows="4" cols="50"></textarea>
+            <input type="submit" value="Submit">
+        </form>
     </main>
     <footer class="a5-footer">
         <div class="a5-socials">
