Link contact page in footer

--- a/assignment-5/a5-contact.html
+++ b/assignment-5/a5-contact.html
@@ -75,7 +75,8 @@
             </ul>
         </div>
         <div class="a5-footer-misc-links">
-            <li class="footer-item"><a class="a5-footer-link a5-footer-misc-link" href="">Contact Us</a></li>
+            <li class="footer-item"><a class="a5-footer-link a5-footer-misc-link" href="a5-contact.html">Contact Us</a>
+            </li>
             <li class="footer-item"><a class="a5-footer-link a5-footer-misc-link" href="#">FAQs</a></li>
         </div>
     </footer>
