Create product details pg for out of stock buns
 - Linked in stock buns to available pg
 - Linked out of stock buns to out of stock pg
 - Made minor CSS fix related to stock msg color

--- a/assignment-5/a5-browse.html
+++ b/assignment-5/a5-browse.html
@@ -45,7 +45,7 @@
         <div class="a5-bun-option-list">
             <div class="a5-bun-option-row">
                 <div class="a5-bun-option">
-                    <a href="a5-details.html" class="a5-bun-option-card-link">
+                    <a href="a5-details-available.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
                             <img class="a5-bun-image" src="./assets/bun8.jpeg">
                         </div>
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="a5-bun-option">
-                    <a href="a5-details.html" class="a5-bun-option-card-link">
+                    <a href="a5-details-available.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
                             <div class="a5-bun-option-card">
                                 <img class="a5-bun-image" src="./assets/bun5.jpeg">
@@ -74,7 +74,7 @@
             </div>
             <div class="a5-bun-option-row">
                 <div class="a5-bun-option">
-                    <a href="a5-details.html" class="a5-bun-option-card-link">
+                    <a href="a5-details-out-of-stock.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
                             <img class="a5-bun-image" src="./assets/bun6.jpeg">
                         </div>
@@ -87,7 +87,7 @@
                 </div>
 
                 <div class="a5-bun-option">
-                    <a href="a5-details.html" class="a5-bun-option-card-link">
+                    <a href="a5-details-available.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
                             <img class="a5-bun-image" src="./assets/bun1.jpeg">
                         </div>
@@ -101,7 +101,7 @@
             </div>
             <div class="a5-bun-option-row">
                 <div class="a5-bun-option">
-                    <a href="a5-details.html" class="a5-bun-option-card-link">
+                    <a href="a5-details-available.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
                             <img class="a5-bun-image" src="./assets/bun9.jpeg">
                         </div>
@@ -114,7 +114,7 @@
                 </div>
 
                 <div class="a5-bun-option">
-                    <a href="a5-details.html" class="a5-bun-option-card-link">
+                    <a href="a5-details-out-of-stock.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
                             <img class="a5-bun-image" src="./assets/bun4.jpeg">
                         </div>
