--- a/assignment-5/a5-about.html
+++ b/assignment-5/a5-about.html
@@ -37,6 +37,26 @@
             </ul>
         </div>
     </nav>
+    <main class="a5-about-main">
+        <h1 class="a5-about-title">The Founders</h1>
+        <div class="a5-about-founders">
+            <div class="a5-about-founder">
+                <img src="./assets/rita.jpeg" alt="BunBun Logo" class="a5-about-founder-img" />
+                <p>Rita Mellon - Lovingly known as the Chief Baking Officer of Bun Bun, Rita has been handling the
+                    baking
+                    side of Bun Bun ever since it was started! Aside from baking, she loves to read, travel and hike.
+                    She’s
+                    also a professor of Economics and teaches part time at CMU.</p>
+            </div>
+            <div class="a5-about-founder">
+                <img src="./assets/sujay.jpeg" alt="BunBun Logo" class="a5-about-founder-img" />
+                <p>Sujay Mellon - An amateur baker himself, Sujay looks after the business and revenue of BunBun. He
+                    enjoys
+                    fishing, biking and going on hikes. He also runs his fishing gear business on the side in Michigan.
+                </p>
+            </div>
+        </div>
+    </main>
     <footer class="a5-footer">
         <div class="a5-socials">
             <ul class="a5-footer-links">
