Make contact us form fields required

--- a/assignment-5/a5-contact.html
+++ b/assignment-5/a5-contact.html
@@ -50,14 +50,14 @@
                 required>
             <label class="a5-contact-form-label" for="email">Email ID</label>
             <input type="email" class="a5-contact-form-field" placeholder="Enter your email here" id="email"
-                name="email">
+                name="email" required>
             <label class="a5-contact-form-label" for="title">Message Title</label>
             <input type="text" class="a5-contact-form-field" placeholder="Enter message title here" id="title"
-                name="title">
+                name="title" required>
             <label class="a5-contact-form-label" for="message">Message Body</label>
             <textarea id="message" class="a5-contact-form-textarea" placeholder="Enter message here" name="message"
                 rows="4" cols="50"></textarea>
-            <input type="submit" class="a5-contact-submit-btn" value="Submit">
+            <input type="submit" class="a5-contact-submit-btn" value="Submit" required>
         </form>
     </main>
     <footer class="a5-footer">
