--- a/assignment-5/a5-home.html
+++ b/assignment-5/a5-home.html
@@ -64,11 +64,12 @@
             </div>
         </div>
         <div class="a5-customer-reviews">
+            <h1 class="a5-customer-reviews-header">Our Happy Customers</h1>
             <p>“I always come here whenever I’m in town! Literally the best cinnamon buns in the US! LOVE” -
                 Jimmy, San Jose</p>
             <p>“The Pumpkin Spice buns @ Bun Bun are so delicious! I love coming here with my
                 kids every weekend!” - Laila, Pittsburgh</p>
-            <p>“I’ve been coming here since I was 5. It just keeps getting better! The original cinnamon bun
+            <p>“I’ve been coming here since I was 5 & it keeps getting better! The original cinnamon bun
                 will NEVER get old!” - Shankar, India</p>
             <p>“Rita and Sujay are lovely hosts. 10/10 would come again. This place is magic!” - Lisa,
                 Denver
