--- a/assignment-5/a5-home.html
+++ b/assignment-5/a5-home.html
@@ -41,35 +41,13 @@
         <div class="a5-landing-cover">
 
         </div>
-        <div class="a5-awards">
-            <div class="a5-award-row">
-                <div class="a5-award">
-                    <img class="a5-award_logo" src="./assets/award_logo.png">
-                    <p>Voted #1 in the #pghBunFuns Competition</p>
-                </div>
-                <div class="a5-award">
-                    <img class="a5-award_logo" src="./assets/hearts.png">
-                    <p>4/5 tourists visited BunBun when they were in PGH</p>
-                </div>
-            </div>
-            <div class="a5-award-row">
-                <div class="a5-award">
-                    <img class="a5-award_logo" src="./assets/approval.png">
-                    <p>A trusted brand in PGH, trusted by locals since '94</p>
-                </div>
-                <div class="a5-award">
-                    <img class="a5-award_logo" src="./assets/badge.png">
-                    <p>Winner of the USA Confectionary Awards '17</p>
-                </div>
-            </div>
-        </div>
         <div class="a5-customer-reviews">
             <h1 class="a5-customer-reviews-header">Our Happy Customers</h1>
             <p>“I always come here whenever I’m in town! Literally the best cinnamon buns in the US! LOVE” -
                 Jimmy, San Jose</p>
             <p>“The Pumpkin Spice buns @ Bun Bun are so delicious! I love coming here with my
                 kids every weekend!” - Laila, Pittsburgh</p>
-            <p>“I’ve been coming here since I was 5 & it keeps getting better! The original cinnamon bun
+            <p>“Been coming here since I was 5 & it keeps getting better! The original cinnamon bun
                 will NEVER get old!” - Shankar, India</p>
             <p>“Rita and Sujay are lovely hosts. 10/10 would come again. This place is magic!” - Lisa,
                 Denver
