Add body to landing cover area

--- a/assignment-5/a5-home.html
+++ b/assignment-5/a5-home.html
@@ -39,7 +39,13 @@
     </nav>
     <main>
         <div class="a5-landing-cover">
-
+            <div class="a5-landing-cover-body">
+                <p class="a5-landing-cover-body-headline">Pittsburgh's award winning cinnamon rolls can now be delivered
+                    right to your doorstep!</p>
+                <a href="./a5-browse.html" class="a5-landing-cover-body-menu-btn">
+                    <div class="a5-landing-cover-body-menu-btn-content">Check out our menu →</div>
+                </a>
+            </div>
         </div>
         <div class="a5-customer-reviews">
             <h1 class="a5-customer-reviews-header">Our Happy Customers</h1>
