Style bun detail fields on details pg

--- a/assignment-5/a5-details-out-of-stock.html
+++ b/assignment-5/a5-details-out-of-stock.html
@@ -43,14 +43,15 @@
         <div class="a5-details-bun-description">
             <img class="a5-details-bun-image" src="./assets/bun6.jpeg">
             <div class="a5-details-bun-info">
-                <p class="a5-details-bun-out-of-stock">8 buns left!</p>
+                <p class="a5-details-bun-out-of-stock">Out of stock!</p>
                 <div class="a5-details-bun-detail">
-                    <p>Price</p>
-                    <p>12 $</p>
+                    <p class="a5-details-bun-detail-title">Price</p>
+                    <p class="a5-details-bun-detail-value">12 $</p>
                 </div>
                 <div class="a5-details-bun-detail">
-                    <p>Quantity</p>
-                    <select name="a5-bun-quantity" id="a5-bun-quantity">
+                    <p class="a5-details-bun-detail-title">Quantity</p>
+                    <select class="a5-details-bun-detail-value a5-details-bun-detail-dd" name="a5-bun-quantity"
+                        id="a5-bun-quantity">
                         <option value="a5-bun-qty1">1 piece</option>
                         <option value="a5-bun-qty3">3 pieces</option>
                         <option value="a5-bun-qty6">6 pieces</option>
@@ -58,8 +59,9 @@
                     </select>
                 </div>
                 <div class="a5-details-bun-detail">
-                    <p>Glaze</p>
-                    <select name="a5-bun-quantity" id="a5-bun-quantity">
+                    <p class="a5-details-bun-detail-title">Glaze</p>
+                    <select class="a5-details-bun-detail-value a5-details-bun-detail-dd" name="a5-bun-quantity"
+                        id="a5-bun-glaze">
                         <option value="a5-bun-qty1">None</option>
                         <option value="a5-bun-qty3">Sugar-milk</option>
                         <option value="a5-bun-qty6">Vanilla-milk</option>
