Add add to cart btn on details pg

--- a/assignment-5/a5-details-out-of-stock.html
+++ b/assignment-5/a5-details-out-of-stock.html
@@ -68,6 +68,7 @@
                         <option value="a5-bun-qty12">Double-chocolate</option>
                     </select>
                 </div>
+                <div class="a5-details-add-to-bag-out-of-stock">Add to bag</div>
             </div>
         </div>
         <div class=class="a5-details-bun-extra-info">
