--- a/assignment-5/a5-details-available.html
+++ b/assignment-5/a5-details-available.html
@@ -67,6 +67,7 @@
                         <option value="a5-bun-qty12">Double-chocolate</option>
                     </select>
                 </div>
+                <div class="a5-details-add-to-bag-available">Add to bag</div>
             </div>
         </div>
         <div class=class="a5-details-bun-extra-info">
