Fix image alignment issues in about pg

--- a/assignment-5/a5-about.html
+++ b/assignment-5/a5-about.html
@@ -40,7 +40,7 @@
     <main class="a5-about-main">
         <h1 class="a5-about-title">The Founders</h1>
         <div class="a5-about-founders">
-            <div class="a5-about-founder">
+            <div class="a5-about-founder a5-about-rita">
                 <img src="./assets/rita.jpeg" alt="BunBun Logo" class="a5-about-founder-img" />
                 <p>Rita Mellon - Lovingly known as the Chief Baking Officer of Bun Bun, Rita has been handling the
                     baking
@@ -48,7 +48,7 @@
                     She’s
                     also a professor of Economics and teaches part time at CMU.</p>
             </div>
-            <div class="a5-about-founder">
+            <div class="a5-about-founder a5-about-sujay">
                 <img src="./assets/sujay.jpeg" alt="BunBun Logo" class="a5-about-founder-img" />
                 <p>Sujay Mellon - An amateur baker himself, Sujay looks after the business and revenue of BunBun. He
                     enjoys
