Add link to go back to menu from details pg

--- a/assignment-5/a5-details-available.html
+++ b/assignment-5/a5-details-available.html
@@ -36,6 +36,7 @@
         </div>
     </nav>
     <main class="a5-details-main">
+        <a href="./a5-browse.html" class="a5-details-back-link">˂ Back to Menu</a>
         <h1 class="a5-details-title">Pumpkin Spice</h1>
         <p class="a5-details-oneliner">A fall favorite and something that’s always selling out, this cinnamon roll is
             now available all year round on popular demand! Best enjoyed warm with a hot cup of tea.</p>
