--- a/assignment-5/a5-details-out-of-stock.html
+++ b/assignment-5/a5-details-out-of-stock.html
@@ -36,6 +36,7 @@
         </div>
     </nav>
     <main class="a5-details-main">
+        <a href="./a5-browse.html" class="a5-details-back-link">˂ Back to Menu</a>
         <h1 class="a5-details-title">Walnut</h1>
         <p class="a5-details-oneliner">These gooey and sweet cinnamon rolls topped with crunchy roasted walnuts are a
             surefire
