Fix alt text for images accross project

--- a/assignment-5/a5-about.html
+++ b/assignment-5/a5-about.html
@@ -41,7 +41,7 @@
         <h1 class="a5-about-title">The Founders</h1>
         <div class="a5-about-founders">
             <div class="a5-about-founder a5-about-rita">
-                <img src="./assets/rita.jpeg" alt="BunBun Logo" class="a5-about-founder-img" />
+                <img src="./assets/rita.jpeg" alt="A picture of Rita" class="a5-about-founder-img" />
                 <p>Rita Mellon - Lovingly known as the Chief Baking Officer of Bun Bun, Rita has been handling the
                     baking
                     side of Bun Bun ever since it was started! Aside from baking, she loves to read, travel and hike.
@@ -49,7 +49,7 @@
                     also a professor of Economics and teaches part time at CMU.</p>
             </div>
             <div class="a5-about-founder a5-about-sujay">
-                <img src="./assets/sujay.jpeg" alt="BunBun Logo" class="a5-about-founder-img" />
+                <img src="./assets/sujay.jpeg" alt="A picture of Sujay" class="a5-about-founder-img" />
                 <p>Sujay Mellon - An amateur baker himself, Sujay looks after the business and revenue of BunBun. He
                     enjoys
                     fishing, biking and going on hikes. He also runs his fishing gear business on the side in Michigan.
@@ -78,8 +78,8 @@
                 reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
                 cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
             <div class="a5-about-story-images">
-                <img src="./assets/oldpic1.jpeg" alt="BunBun Logo" class="a5-about-story-image" />
-                <img src="./assets/oldpic2.jpeg" alt="BunBun Logo" class="a5-about-story-image" />
+                <img src="./assets/oldpic1.jpeg" alt="An old Pic of BunBun from 1992" class="a5-about-story-image" />
+                <img src="./assets/oldpic2.jpeg" alt="An old Pic of BunBun from 1992" class="a5-about-story-image" />
             </div>
         </div>
     </main>
@@ -87,13 +87,15 @@
         <div class="a5-socials">
             <ul class="a5-footer-links">
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="./assets/instagram_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/instagram_logo.png" alt="Instagram Logo" width="24"
+                            class="nav-logo-img" /></a>
                 </li>
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="./assets/facebook_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/facebook_logo.png" alt="Facebook Logo" width="24" class="nav-logo-img" /></a>
                 </li>
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="./assets/pinterest_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/pinterest_logo.png" alt="Pinterest Logo" width="24"
+                            class="nav-logo-img" /></a>
                 </li>
             </ul>
         </div>
