--- a/assignment-5/a5-contact.html
+++ b/assignment-5/a5-contact.html
@@ -64,13 +64,15 @@
         <div class="a5-socials">
             <ul class="a5-footer-links">
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="./assets/instagram_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/instagram_logo.png" alt="Instagram Logo" width="24"
+                            class="nav-logo-img" /></a>
                 </li>
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="./assets/facebook_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/facebook_logo.png" alt="Facebook Logo" width="24" class="nav-logo-img" /></a>
                 </li>
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="./assets/pinterest_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/pinterest_logo.png" alt="Pinterest Logo" width="24"
+                            class="nav-logo-img" /></a>
                 </li>
             </ul>
         </div>
