--- a/assignment-5/a5-details-available.html
+++ b/assignment-5/a5-details-available.html
@@ -41,7 +41,7 @@
         <p class="a5-details-oneliner">A fall favorite and something that’s always selling out, this cinnamon roll is
             now available all year round on popular demand! Best enjoyed warm with a hot cup of tea.</p>
         <div class="a5-details-bun-description">
-            <img class="a5-details-bun-image" src="./assets/bun5.jpeg">
+            <img class="a5-details-bun-image" src="./assets/bun5.jpeg" alt="Image of Pumpkin Spice Bun">
             <div class="a5-details-bun-info">
                 <p class="a5-details-bun-available">8 buns left!</p>
                 <div class="a5-details-bun-detail">
@@ -76,11 +76,11 @@
         <div class=class="a5-details-bun-extra-info">
             <div class="a5-details-bun-extra-info-row">
                 <h2 class="a5-details-bun-extra-info-title">Ingredients</h2>
-                <img class="a5-details-down-arrow" src="./assets/down-arrow.png">
+                <img class="a5-details-down-arrow" src="./assets/down-arrow.png" alt="Icon for down arrow">
             </div>
             <div class="a5-details-bun-extra-info-row">
                 <h2 class="a5-details-bun-extra-info-title">Storage Info</h2>
-                <img class="a5-details-down-arrow" src="./assets/down-arrow.png">
+                <img class="a5-details-down-arrow" src="./assets/down-arrow.png" alt="Icon for down arrow">
             </div>
             <div class="a5-details-bun-bestsellers">
                 <h2 class="a5-details-bun-extra-info-title">Our Bestsellers</h2>
@@ -90,7 +90,7 @@
                     <div class="a5-bun-option-row">
                         <div class="a5-bun-option">
                             <div class="a5-bun-option-card">
-                                <img class="a5-bun-image" src="./assets/bun8.jpeg">
+                                <img class="a5-bun-image" src="./assets/bun8.jpeg" alt="Image for Original Bun">
                             </div>
                             <div class="a5-bun-info">
                                 <span class="a5-bun-availability">5 buns left!</span>
@@ -102,7 +102,7 @@
                     <div class="a5-bun-option-row">
                         <div class="a5-bun-option">
                             <div class="a5-bun-option-card">
-                                <img class="a5-bun-image" src="./assets/bun6.jpeg">
+                                <img class="a5-bun-image" src="./assets/bun6.jpeg" alt="Image for Walnut Bun">
                             </div>
                             <div class="a5-bun-info">
                                 <span class="a5-bun-out-of-stock">Out of stock!</span>
@@ -120,13 +120,15 @@
         <div class="a5-socials">
             <ul class="a5-footer-links">
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="./assets/instagram_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/instagram_logo.png" alt="Instagram Logo" width="24"
+                            class="nav-logo-img" /></a>
                 </li>
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="./assets/facebook_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/facebook_logo.png" alt="Facebook Logo" width="24" class="nav-logo-img" /></a>
                 </li>
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="./assets/pinterest_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/pinterest_logo.png" alt="Pinterest Logo" width="24"
+                            class="nav-logo-img" /></a>
                 </li>
             </ul>
         </div>
