--- a/assignment-5/a5-browse.html
+++ b/assignment-5/a5-browse.html
@@ -47,7 +47,7 @@
                 <div class="a5-bun-option">
                     <a href="a5-details-available.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
-                            <img class="a5-bun-image" src="./assets/bun8.jpeg">
+                            <img class="a5-bun-image" src="./assets/bun8.jpeg" alt="Image of Original Bun">
                         </div>
                         <div class="a5-bun-info">
                             <span class="a5-bun-availability">5 buns left!</span>
@@ -61,7 +61,7 @@
                     <a href="a5-details-available.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
                             <div class="a5-bun-option-card">
-                                <img class="a5-bun-image" src="./assets/bun5.jpeg">
+                                <img class="a5-bun-image" src="./assets/bun5.jpeg" alt="Image of Pumpkin Spice Bun">
                             </div>
                             <div class="a5-bun-info">
                                 <span class="a5-bun-availability">8 buns left!</span>
@@ -76,7 +76,7 @@
                 <div class="a5-bun-option">
                     <a href="a5-details-out-of-stock.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
-                            <img class="a5-bun-image" src="./assets/bun6.jpeg">
+                            <img class="a5-bun-image" src="./assets/bun6.jpeg" alt="Image of Walnut Bun">
                         </div>
                         <div class="a5-bun-info">
                             <span class="a5-bun-out-of-stock">Out of stock!</span>
@@ -89,7 +89,8 @@
                 <div class="a5-bun-option">
                     <a href="a5-details-available.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
-                            <img class="a5-bun-image" src="./assets/bun1.jpeg">
+                            <img class="a5-bun-image" src="./assets/bun1.jpeg"
+                                alt="Image of Original (Gluten Free) Bun">
                         </div>
                         <div class="a5-bun-info">
                             <span class="a5-bun-availability">4 buns left!</span>
@@ -103,7 +104,7 @@
                 <div class="a5-bun-option">
                     <a href="a5-details-available.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
-                            <img class="a5-bun-image" src="./assets/bun9.jpeg">
+                            <img class="a5-bun-image" src="./assets/bun9.jpeg" alt="Image of Blackberry Bun">
                         </div>
                         <div class="a5-bun-info">
                             <span class="a5-bun-availability">12 buns left!</span>
@@ -116,7 +117,7 @@
                 <div class="a5-bun-option">
                     <a href="a5-details-out-of-stock.html" class="a5-bun-option-card-link">
                         <div class="a5-bun-option-card">
-                            <img class="a5-bun-image" src="./assets/bun4.jpeg">
+                            <img class="a5-bun-image" src="./assets/bun4.jpeg" alt="Image of Caramel Pecan Bun">
                         </div>
                         <div class="a5-bun-info">
                             <span class="a5-bun-out-of-stock">Out of stock!</span>
@@ -132,13 +133,15 @@
         <div class="a5-socials">
             <ul class="a5-footer-links">
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="./assets/instagram_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/instagram_logo.png" alt="Instagram Logo" width="24"
+                            class="nav-logo-img" /></a>
                 </li>
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="./assets/facebook_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/facebook_logo.png" alt="Facebook Logo" width="24" class="nav-logo-img" /></a>
                 </li>
                 <li class="footer-item"><a class="a5-footer-link a5-footer-social-link" href="#"><img
-                            src="./assets/pinterest_logo.png" alt="BunBun Logo" width="24" class="nav-logo-img" /></a>
+                            src="./assets/pinterest_logo.png" alt="Pinterest Logo" width="24"
+                            class="nav-logo-img" /></a>
                 </li>
             </ul>
         </div>
