--- a/assignment-5/a5-details-available.html
+++ b/assignment-5/a5-details-available.html
@@ -69,8 +69,8 @@
                     </select>
                 </div>
                 <div class="a5-details-add-to-bag-available">Add to bag</div>
-                <div class="a5-details-schedule-order">Want to order buns for a later date? <a href="">Schedule future
-                        batch order</a></div>
+                <div class="a5-details-schedule-order">Want to order buns for a later date? <a href="">Schedule an
+                        order</a></div>
             </div>
         </div>
         <div class=class="a5-details-bun-extra-info">
