Fix price for bun in details pg

--- a/assignment-5/a5-details-available.html
+++ b/assignment-5/a5-details-available.html
@@ -46,7 +46,7 @@
                 <p class="a5-details-bun-available">8 buns left!</p>
                 <div class="a5-details-bun-detail">
                     <p class="a5-details-bun-detail-title">Price</p>
-                    <p class="a5-details-bun-detail-value">12 $</p>
+                    <p class="a5-details-bun-detail-value">$ 4</p>
                 </div>
                 <div class="a5-details-bun-detail">
                     <p class="a5-details-bun-detail-title">Quantity</p>
