--- a/assignment-5/a5-details-out-of-stock.html
+++ b/assignment-5/a5-details-out-of-stock.html
@@ -47,7 +47,7 @@
                 <p class="a5-details-bun-out-of-stock">Out of stock!</p>
                 <div class="a5-details-bun-detail">
                     <p class="a5-details-bun-detail-title">Price</p>
-                    <p class="a5-details-bun-detail-value">12 $</p>
+                    <p class="a5-details-bun-detail-value">$ 5.50</p>
                 </div>
                 <div class="a5-details-bun-detail">
                     <p class="a5-details-bun-detail-title">Quantity</p>
