Change entry path to hw5 in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>Please click on the following links to access each individual project:</p>
         <ul class="pui-assignment-list">
             <li>
-                <a href="./assignment-5/a5-home.html" target="_blank">Assignment 5 – Web HTML and CSS Prototypes</a>
+                <a href="./homework_5/a5-home.html" target="_blank">Assignment 5 – Web HTML and CSS Prototypes</a>
             </li>
         </ul>
     </main>
