Remove required attribute from submit btn

--- a/homework_5/a5-contact.html
+++ b/homework_5/a5-contact.html
@@ -57,7 +57,7 @@
             <label class="a5-contact-form-label" for="message">Message Body</label>
             <textarea id="message" class="a5-contact-form-textarea" placeholder="Enter message here" name="message"
                 rows="4" cols="50"></textarea>
-            <input type="submit" class="a5-contact-submit-btn" value="Submit" required>
+            <input type="submit" class="a5-contact-submit-btn" value="Submit">
         </form>
     </main>
     <footer class="a5-footer">
