Omit unwanted txt & trailing div from details pg

--- a/homework_5/a5-details-available.html
+++ b/homework_5/a5-details-available.html
@@ -73,7 +73,7 @@
                         order</a></div>
             </div>
         </div>
-        <div class=class="a5-details-bun-extra-info">
+        <div class="a5-details-bun-extra-info">
             <div class="a5-details-bun-extra-info-row">
                 <h2 class="a5-details-bun-extra-info-title">Ingredients</h2>
                 <img class="a5-details-down-arrow" src="./assets/down-arrow.png" alt="Icon for down arrow">
@@ -113,7 +113,6 @@
                     </div>
                 </div>
             </div>
-        </div>
         </div>
     </main>
     <footer class="a5-footer">
