--- a/homework_5/a5-details-out-of-stock.html
+++ b/homework_5/a5-details-out-of-stock.html
@@ -74,7 +74,7 @@
                         an order</a></div>
             </div>
         </div>
-        <div class=class="a5-details-bun-extra-info">
+        <div class="a5-details-bun-extra-info">
             <div class="a5-details-bun-extra-info-row">
                 <h2 class="a5-details-bun-extra-info-title">Ingredients</h2>
                 <img class="a5-details-down-arrow" src="./assets/down-arrow.png" alt="Down arrow icon">
@@ -114,7 +114,6 @@
                     </div>
                 </div>
             </div>
-        </div>
         </div>
     </main>
     <footer class="a5-footer">
