Add oneliner explaining purpose of each html file

--- a/homework_5/a5-about.html
+++ b/homework_5/a5-about.html
@@ -1,3 +1,5 @@
+<!-- Page introducing readers to the founders of BunBun and the history behind the bakeshop -->
+
 <!DOCTYPE html>
 <html lang="en">
 
